h1. CHANGELOG

h2. 1.5.3 June 26, 2012

* update 'prelaunch_signup' recipe with migration for 'opt-in' field
* update gem 'factory_girl_rails' from 3.3.0 to 3.5.0
* update gem 'cancan' from 1.6.7 to 1.6.8
* update gem 'compass' from 0.12.1 to 0.12.2
* update gem 'compass-rails' from 1.0.0 to 1.0.2
* update gem 'devise' from 2.1.0 to 2.1.2
* update gem 'mongoid-rspec' from 1.4.4 to 1.4.6

h2. 1.5.2 June 10, 2012

* add 'prelaunch_signup' recipe
* fix 'seed_database' recipe to apply migration for devise_invitable
* update 'devise' recipe to apply patch for problems with Rolify 3.1 and Mongoid
* revert 'devise' recipe to remove 'rolify 3.2.0.beta4' with Mongoid

h2. 1.5.1 June 8, 2012

* update 'devise' recipe to use 'rolify 3.2.0.beta4' with Mongoid
* update gem 'bson_ext' from 1.6.2 to 1.6.4
* update gem 'mongoid' from 2.4.10 to 2.4.11
* update gem 'devise_invitable' from 1.0.1 to 1.0.2
* update gem 'database_cleaner' from 0.7.2 to 0.8.0
* fix 'omniauth' and 'add_user' recipes to improve regex for gsub_file (contributed by Hosam Aly)

h2. 1.5.0 May 21, 2012

* New "defaults" option to specify recipes and preferences (contributed by Bryan Stearns)
* revised README

h2. 1.4.14 May 20, 2012

* update 'add_user' recipe to rename folders used for Devise Haml views
* minor update to 'action_mailer' recipe for "Mandrill by MailChimp" option

h2. 1.4.13 May 19, 2012

* update 'action_mailer' recipe to add "Mandrill by MailChimp" option

h2. 1.4.12 May 17, 2012

* update 'action_mailer' recipe to allow choice of sending email via SMTP, Gmail, or SendGrid accounts
* update gem 'bootstrap-sass' from 2.0.1 to 2.0.3
* remove 'add_user' patch for https://github.com/RailsApps/rails3-application-templates/issues/35
* update gem 'haml' from 3.1.5 to 3.1.6
* update gem 'devise' from 2.1.0.rc2 to 2.1.0

h2. 1.4.11 May 13, 2012

* fix 'add_user' recipe to add patch for https://github.com/RailsApps/rails3-application-templates/issues/35