@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "1.5.3"
+  VERSION = "1.5.4"
 end
